--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <title>SpeedCv</title>
+	<title>SpeedCv</title>
+	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 </head>
 
 <body>
-  More informations later...
-</body>
+	<h3 class="text-center">Welcome to SpeedCv</h3>
+	<h4 class="text-center">Make your cv fast</h4>
 
+
+	<script src="https://unpkg.com/jspdf@latest/dist/jspdf.min.js"></script>
+	<script src="assets/js/bootstrap.min.js"></script>
+	<script src="assets/js/jquery-3.2.1.min.js"></script>
+</body>
 </html>
